--- a/.gitignore
+++ b/.gitignore
@@ -27,44 +27,35 @@
 _autosave*.*
 _saved*.sch
 *.cmake
-
-code/poco-1.7.6/
-code/LegController/Release
-code/cortex-workspace/
-code/Cortex/Release/
-code/Cortex/.settings/
-code/workspace/
-
-cad/stl/
-OldVersions/
-
-schematics/libraries/
-
-datasheets/ServoFrameWork/
-datasheets/RPLidar A2/rplidar_sdk_v1\.5\.7/
-
-code/Common/Default/
-code/Kinematics/Default/
 *.rej
 
-code/ros/\.catkin_workspace
-code/ros/build/
-code/ros/devel/
-code/ros/src/pentapod_engine/CMakeFiles/
-code/ros/src/pentapod_engine/CTestTestfile/
-code/ros/src/pentapod_engine/catkin_generated/
-code/ros/src/pentapod_engine/cmake_install/
-code/ros/src/pentapod_engine/cmake/
-code/ros/src/pentapod_library/CMakeFiles/
-code/ros/src/pentapod_library/catkin_generated/
-code/ros/src/pentapod_server/CMakeFiles/
-code/ros/src/pentapod_server/catkin_generated/
-code/ros/src/catkin_generated/
-code/ros/src/CMakeFiles/
-code/ros/src/catkin/catkin_generated/version/
-code/ros/src/devel/
-code/ros/src/gtest/
-
-
-
+cortex-workspace/
 workspace/
+
+
+Common/Default/
+Kinematics/Default/
+Planer/Default/
+Cortex/Release/
+Kinematics/Default/
+
+ros/\.catkin_workspace
+ros/build/
+ros/devel/
+ros/src/pentapod_engine/CMakeFiles/
+ros/src/pentapod_engine/CTestTestfile/
+ros/src/pentapod_engine/catkin_generated/
+ros/src/pentapod_engine/cmake_install/
+ros/src/pentapod_engine/cmake/
+ros/src/pentapod_library/CMakeFiles/
+ros/src/pentapod_library/catkin_generated/
+ros/src/pentapod_server/CMakeFiles/
+ros/src/pentapod_server/catkin_generated/
+ros/src/catkin_generated/
+ros/src/CMakeFiles/
+ros/src/catkin/catkin_generated/version/
+ros/src/devel/
+ros/src/gtest/
+
+
+
