--- a/ros/src/pentapod_server/costmaps/global_costmap_params.yaml
+++ b/ros/src/pentapod_server/costmaps/global_costmap_params.yaml
@@ -1,7 +1,8 @@
 global_costmap:
   global_frame: /map
   robot_base_frame: base_link
-  update_frequency: 5.0
-  publish_frequency: 3.0
+  update_frequency: 2.5
+  publish_frequency: 1.0
   static_map: true
-  transform_tolerance: 30
+  rolling_window: false
+  always_send_full_costmap : false
