--- a/ros/src/pentapod_server/costmaps/local_costmap_params.yaml
+++ b/ros/src/pentapod_server/costmaps/local_costmap_params.yaml
@@ -1,15 +1,15 @@
 local_costmap:
-  global_frame: /map
+  global_frame: map
   robot_base_frame: base_link
-  update_frequency: 3.0
-  publish_frequency: 2.0
+  update_frequency: 2.5
+  publish_frequency: 1.0
   static_map: false
-#  Setting the "rolling_window" parameter to true means that the costmap 
-# will remain centered around the robot as the robot moves through the world
+  # Setting the "rolling_window" parameter to true means that the costmap 
+  # will remain centered around the robot as the robot moves through the world
   rolling_window: true
   width: 4
   height: 4
-  resolution: 0.1
+  resolution: 0.05
   transform_tolerance: 10
 plugins:
 - {name: static_layer, type: "costmap_2d::StaticLayer"}
