--- a/ros/src/pentapod_server/costmaps/costmap_common_params.yaml
+++ b/ros/src/pentapod_server/costmaps/costmap_common_params.yaml
@@ -1,8 +1,8 @@
 # footprint of the pentapod is actually 0.4m, but we use 0.2[m] for the sake of navigation stack
 # which works better with a smaller footprint and a bigger inflation radius
-robot_radius: 0.20
-# footprint is polygon with 5 egde and radius of 0.04[m]
-# footprint: [ [-0.032,-0.024], [0.012,-0.038], [0.04,0], [0.012,0.038], [-0.032,0.024]]
+#robot_radius: 0.10
+# footprint is polygon with 5 edge and radius of 0.04[m]
+footprint: [ [-0.032,-0.024], [0.012,-0.038], [0.04,0], [0.012,0.038], [-0.032,0.024]]
 # timing tolerance of transformation in [s] 
 transform_tolerance: 0.3
 map_type: costmap
@@ -15,7 +15,7 @@ obstacle_layer:
   # The inflation radius should be set to the maximum distance from obstacles 
   # Since we have defined a footprint that is smaller than the real footprint 
   # we have to compensate that by setting a bigger inflation radius of 0.2m
-  inflation_radius: 0.2
+  inflation_radius: 0.3
   # do not go in unknown space
   track_unknown_space: false
   combination_method: 1
@@ -27,7 +27,7 @@ inflation_layer:
   # The inflation radius should be set to the maximum distance from obstacles 
   # Since we have defined a footprint that is smaller than the real footprint 
   # we have to compensate that by setting a bigger inflation radius of 0.2m
-  inflation_radius: 0.2
+  inflation_radius: 0.3
 static_layer:
   enabled: true
   map_topic: /map
