--- a/ros/src/pentapod_server/costmaps/base_local_planner_params.yaml
+++ b/ros/src/pentapod_server/costmaps/base_local_planner_params.yaml
@@ -2,7 +2,9 @@ TrajectoryPlannerROS:
   max_vel_x: 0.150
   min_vel_x: 0.01
   max_vel_theta: 1.0
-  min_in_place_vel_theta: 0.4
+  min_vel_theta: 0.01
+
+  min_in_place_vel_theta: 0.1
 
   acc_lim_theta: 0.0
   acc_lim_x: 0.01
