--- a/ros/src/pentapod_engine/package.xml
+++ b/ros/src/pentapod_engine/package.xml
@@ -35,6 +35,7 @@
   <build_depend>message_runtime</build_depend>
   <build_depend>pentapod_library</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>sensor_msgs</build_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
