--- a/ros/src/pentapod_server/package.xml
+++ b/ros/src/pentapod_server/package.xml
@@ -14,6 +14,9 @@
   <build_depend>message_runtime</build_depend>
   <build_depend>pentapod_library</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>actionlib</build_depend>
+  <build_depend>move_base_msgs</build_depend>
+  
 
   <run_depend>geometry_msgs</run_depend>
   <run_depend>roscpp</run_depend>
@@ -22,7 +25,8 @@
   <run_depend>message_runtime</run_depend>
   <run_depend>pentapod_library</run_depend>
   <run_depend>sensor_msgs</run_depend>
-
+  <run_depend>actionlib</run_depend>
+  <run_depend>move_base_msgs</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
