--- a/ros/src/pentapod_server/costmaps/global_costmap_params.yaml
+++ b/ros/src/pentapod_server/costmaps/global_costmap_params.yaml
@@ -8,6 +8,6 @@ global_costmap:
   always_send_full_costmap : false
 
   # pentapods frequencies are multiples of 1000/11.2s (the servo frequency) 
-  # odom is prodduced with 3*1000/11.2 = 30Hz 
-  # path planning is done on base of 15  
+  # odom is prodduced with 2*1000/11.2 = 45Hz 
+  # path planning is done on base of 15Hz  
   controller_frequency: 15.0 
