--- a/ros/src/pentapod_server/costmaps/base_local_planner_params.yaml
+++ b/ros/src/pentapod_server/costmaps/base_local_planner_params.yaml
@@ -1,10 +1,13 @@
 TrajectoryPlannerROS:
-  max_vel_x: 0.150
-  min_vel_x: 0.00
+  min_in_place_vel_theta: 0.3
+  y_vels: [-0.650, -0.125, -0.1, -0.075,  -0.05, -0.025, 0.025, 0.05, 0.075, 0.10, 0.125, 0.65]
   max_vel_theta: 0.3
-  min_vel_theta: 0.0
-  min_in_place_vel_theta: 0.0
-  acc_lim_theta: 0.0
-  acc_lim_x: 0.03
-  acc_lim_y: 0.03
+  min_vel_theta: -0.3
+  escape_vel: -0.150
+  max_vel_x: 0.150  
+  min_vel_x: -0.150
+  acc_lim_theta: 3.0
+  acc_lim_x: 0.1
+  acc_lim_y: 0.1
   holonomic_robot: true
+
