--- a/ros/src/pentapod_server/costmaps/global_costmap_params.yaml
+++ b/ros/src/pentapod_server/costmaps/global_costmap_params.yaml
@@ -9,5 +9,8 @@ global_costmap:
 
   # pentapods frequencies are multiples of 1000/11.2s (the servo frequency) 
   # odom is prodduced with 2*1000/11.2 = 45Hz 
-  # path planning is done on base of 15Hz  
-  controller_frequency: 15.0 
+  # path planning is done on base of 22Hz  
+  controller_frequency: 22.3
+  # simulation time in seconds. Significant influence on CPU use. 
+  sim_time: 2.0 # Default 1.0
+  
