--- a/ros/src/pentapod_server/costmaps/teb_local_planner_params.yaml
+++ b/ros/src/pentapod_server/costmaps/teb_local_planner_params.yaml
@@ -1,6 +1,8 @@
 odom_topic: /odom
 map_frame: /map
 
+controller_frequency: 22.3
+  
 # Trajectory
 teb_autosize: True
 dt_ref: 0.4
@@ -8,28 +10,31 @@ dt_hysteresis: 0.1
 global_plan_overwrite_orientation: True
 max_global_plan_lookahead_dist: 3.0
 feasibility_check_no_poses: 2
-allow_init_backward_motion: false
+allow_init_backward_motion: true
 
 # Robot
-max_vel_x: 0.4
-max_vel_x_backwards: 0.2
-max_vel_theta: 0.3 # the angular velocity is also bounded by min_turning_radius in case of a carlike robot (r = v / omega)
-acc_lim_x: 0.5
-acc_lim_theta: 0.5
+max_vel_x: 0.150
+max_vel_x_backwards: 0.150
+max_vel_y: 0.150
+max_vel_y_backwards: 0.150
+
+max_vel_theta: 0.3 
+min_vel_theta: -0.3 
+
+acc_lim_x: 0.08
+acc_lim_y: 0.08
+acc_lim_theta: 5.0
 
 # ***************** pentapod robot parameters ********************
 # change that to a proper insect modelling without turning radius
-
-min_turning_radius: 0.1 
-wheelbase: 0.01                 # Wheelbase of our robot 
-
-cmd_angle_instead_rotvel: True # stage simulator takes the angle instead of the rotvel as input (twist message)
-footprint_model: circular      # types: "point", "circular", "two_circles", "line", "polygon" type: "line"
-radius: 0.4                    # for type "circular"
+min_turning_radius: 0
+cmd_angle_instead_rotvel: false # stage simulator takes the angle instead of the rotvel as input (twist message)
+footprint_model: circular       # types: "point", "circular", "two_circles", "line", "polygon" type: "line"
+radius: 0.05                    # for type "circular"
 
 # GoalTolerance
-xy_goal_tolerance: 0.5
-yaw_goal_tolerance: 0.3
+xy_goal_tolerance: 0.05
+yaw_goal_tolerance: 0.05
 free_goal_vel: False
 
 # Obstacles
@@ -46,14 +51,14 @@ no_inner_iterations: 3
 no_outer_iterations: 3
 optimization_activate: True
 optimization_verbose: False
-penalty_epsilon: 0.1
+penalty_epsilon: 0.05
 weight_max_vel_x: 2
 weight_max_vel_theta: 1
 weight_acc_lim_x: 1
 weight_acc_lim_theta: 1
-weight_kinematics_nh: 1000
-weight_kinematics_forward_drive: 100
-weight_kinematics_turning_radius: 1
+weight_kinematics_nh: 0
+weight_kinematics_forward_drive: 0
+weight_kinematics_turning_radius: 10
 weight_optimaltime: 1
 weight_obstacle: 50
 weight_dynamic_obstacle: 10 # not in use yet
