--- a/ros/src/pentapod_server/CMakeLists.txt
+++ b/ros/src/pentapod_server/CMakeLists.txt
@@ -146,6 +146,7 @@ include_directories(
 # Pentapod common library
 add_executable(${PROJECT_NAME}_node 
    src/CmdDispatcher.cpp
+   src/DarkHoleFinder.cpp
    src/mongoose.c
    src/node.cpp
 )
