--- a/ros/src/pentapod_server/Makefile
+++ b/ros/src/pentapod_server/Makefile
@@ -56,16 +56,6 @@ CMAKE_BINARY_DIR = /home/jochenalt/catkin_ws/src
 #=============================================================================
 # Targets provided globally by CMake.
 
-# Special rule for the target list_install_components
-list_install_components:
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Available install components are: \"Unspecified\""
-.PHONY : list_install_components
-
-# Special rule for the target list_install_components
-list_install_components/fast: list_install_components
-
-.PHONY : list_install_components/fast
-
 # Special rule for the target install
 install: preinstall
 	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Install the project..."
@@ -89,16 +79,15 @@ rebuild_cache/fast: rebuild_cache
 
 .PHONY : rebuild_cache/fast
 
-# Special rule for the target edit_cache
-edit_cache:
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "No interactive CMake dialog available..."
-	/usr/bin/cmake -E echo No\ interactive\ CMake\ dialog\ available.
-.PHONY : edit_cache
+# Special rule for the target list_install_components
+list_install_components:
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Available install components are: \"Unspecified\""
+.PHONY : list_install_components
 
-# Special rule for the target edit_cache
-edit_cache/fast: edit_cache
+# Special rule for the target list_install_components
+list_install_components/fast: list_install_components
 
-.PHONY : edit_cache/fast
+.PHONY : list_install_components/fast
 
 # Special rule for the target install/strip
 install/strip: preinstall
@@ -133,6 +122,17 @@ test/fast: test
 
 .PHONY : test/fast
 
+# Special rule for the target edit_cache
+edit_cache:
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "No interactive CMake dialog available..."
+	/usr/bin/cmake -E echo No\ interactive\ CMake\ dialog\ available.
+.PHONY : edit_cache
+
+# Special rule for the target edit_cache
+edit_cache/fast: edit_cache
+
+.PHONY : edit_cache/fast
+
 # The main all target
 all: cmake_check_build_system
 	cd /home/jochenalt/catkin_ws/src && $(CMAKE_COMMAND) -E cmake_progress_start /home/jochenalt/catkin_ws/src/CMakeFiles /home/jochenalt/catkin_ws/src/pentapod_server/CMakeFiles/progress.marks
@@ -164,6 +164,81 @@ preinstall/fast:
 depend:
 	cd /home/jochenalt/catkin_ws/src && $(CMAKE_COMMAND) -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR) --check-build-system CMakeFiles/Makefile.cmake 1
 .PHONY : depend
+
+# Convenience name for target.
+pentapod_server/CMakeFiles/move_base_msgs_generate_messages_nodejs.dir/rule:
+	cd /home/jochenalt/catkin_ws/src && $(MAKE) -f CMakeFiles/Makefile2 pentapod_server/CMakeFiles/move_base_msgs_generate_messages_nodejs.dir/rule
+.PHONY : pentapod_server/CMakeFiles/move_base_msgs_generate_messages_nodejs.dir/rule
+
+# Convenience name for target.
+move_base_msgs_generate_messages_nodejs: pentapod_server/CMakeFiles/move_base_msgs_generate_messages_nodejs.dir/rule
+
+.PHONY : move_base_msgs_generate_messages_nodejs
+
+# fast build rule for target.
+move_base_msgs_generate_messages_nodejs/fast:
+	cd /home/jochenalt/catkin_ws/src && $(MAKE) -f pentapod_server/CMakeFiles/move_base_msgs_generate_messages_nodejs.dir/build.make pentapod_server/CMakeFiles/move_base_msgs_generate_messages_nodejs.dir/build
+.PHONY : move_base_msgs_generate_messages_nodejs/fast
+
+# Convenience name for target.
+pentapod_server/CMakeFiles/move_base_msgs_generate_messages_py.dir/rule:
+	cd /home/jochenalt/catkin_ws/src && $(MAKE) -f CMakeFiles/Makefile2 pentapod_server/CMakeFiles/move_base_msgs_generate_messages_py.dir/rule
+.PHONY : pentapod_server/CMakeFiles/move_base_msgs_generate_messages_py.dir/rule
+
+# Convenience name for target.
+move_base_msgs_generate_messages_py: pentapod_server/CMakeFiles/move_base_msgs_generate_messages_py.dir/rule
+
+.PHONY : move_base_msgs_generate_messages_py
+
+# fast build rule for target.
+move_base_msgs_generate_messages_py/fast:
+	cd /home/jochenalt/catkin_ws/src && $(MAKE) -f pentapod_server/CMakeFiles/move_base_msgs_generate_messages_py.dir/build.make pentapod_server/CMakeFiles/move_base_msgs_generate_messages_py.dir/build
+.PHONY : move_base_msgs_generate_messages_py/fast
+
+# Convenience name for target.
+pentapod_server/CMakeFiles/move_base_msgs_generate_messages_lisp.dir/rule:
+	cd /home/jochenalt/catkin_ws/src && $(MAKE) -f CMakeFiles/Makefile2 pentapod_server/CMakeFiles/move_base_msgs_generate_messages_lisp.dir/rule
+.PHONY : pentapod_server/CMakeFiles/move_base_msgs_generate_messages_lisp.dir/rule
+
+# Convenience name for target.
+move_base_msgs_generate_messages_lisp: pentapod_server/CMakeFiles/move_base_msgs_generate_messages_lisp.dir/rule
+
+.PHONY : move_base_msgs_generate_messages_lisp
+
+# fast build rule for target.
+move_base_msgs_generate_messages_lisp/fast:
+	cd /home/jochenalt/catkin_ws/src && $(MAKE) -f pentapod_server/CMakeFiles/move_base_msgs_generate_messages_lisp.dir/build.make pentapod_server/CMakeFiles/move_base_msgs_generate_messages_lisp.dir/build
+.PHONY : move_base_msgs_generate_messages_lisp/fast
+
+# Convenience name for target.
+pentapod_server/CMakeFiles/move_base_msgs_generate_messages_cpp.dir/rule:
+	cd /home/jochenalt/catkin_ws/src && $(MAKE) -f CMakeFiles/Makefile2 pentapod_server/CMakeFiles/move_base_msgs_generate_messages_cpp.dir/rule
+.PHONY : pentapod_server/CMakeFiles/move_base_msgs_generate_messages_cpp.dir/rule
+
+# Convenience name for target.
+move_base_msgs_generate_messages_cpp: pentapod_server/CMakeFiles/move_base_msgs_generate_messages_cpp.dir/rule
+
+.PHONY : move_base_msgs_generate_messages_cpp
+
+# fast build rule for target.
+move_base_msgs_generate_messages_cpp/fast:
+	cd /home/jochenalt/catkin_ws/src && $(MAKE) -f pentapod_server/CMakeFiles/move_base_msgs_generate_messages_cpp.dir/build.make pentapod_server/CMakeFiles/move_base_msgs_generate_messages_cpp.dir/build
+.PHONY : move_base_msgs_generate_messages_cpp/fast
+
+# Convenience name for target.
+pentapod_server/CMakeFiles/move_base_msgs_generate_messages_eus.dir/rule:
+	cd /home/jochenalt/catkin_ws/src && $(MAKE) -f CMakeFiles/Makefile2 pentapod_server/CMakeFiles/move_base_msgs_generate_messages_eus.dir/rule
+.PHONY : pentapod_server/CMakeFiles/move_base_msgs_generate_messages_eus.dir/rule
+
+# Convenience name for target.
+move_base_msgs_generate_messages_eus: pentapod_server/CMakeFiles/move_base_msgs_generate_messages_eus.dir/rule
+
+.PHONY : move_base_msgs_generate_messages_eus
+
+# fast build rule for target.
+move_base_msgs_generate_messages_eus/fast:
+	cd /home/jochenalt/catkin_ws/src && $(MAKE) -f pentapod_server/CMakeFiles/move_base_msgs_generate_messages_eus.dir/build.make pentapod_server/CMakeFiles/move_base_msgs_generate_messages_eus.dir/build
+.PHONY : move_base_msgs_generate_messages_eus/fast
 
 # Convenience name for target.
 pentapod_server/CMakeFiles/pentapod_server_node.dir/rule:
@@ -206,6 +281,33 @@ src/CmdDispatcher.s: src/CmdDispatcher.cpp.s
 src/CmdDispatcher.cpp.s:
 	cd /home/jochenalt/catkin_ws/src && $(MAKE) -f pentapod_server/CMakeFiles/pentapod_server_node.dir/build.make pentapod_server/CMakeFiles/pentapod_server_node.dir/src/CmdDispatcher.cpp.s
 .PHONY : src/CmdDispatcher.cpp.s
+
+src/DarkHoleFinder.o: src/DarkHoleFinder.cpp.o
+
+.PHONY : src/DarkHoleFinder.o
+
+# target to build an object file
+src/DarkHoleFinder.cpp.o:
+	cd /home/jochenalt/catkin_ws/src && $(MAKE) -f pentapod_server/CMakeFiles/pentapod_server_node.dir/build.make pentapod_server/CMakeFiles/pentapod_server_node.dir/src/DarkHoleFinder.cpp.o
+.PHONY : src/DarkHoleFinder.cpp.o
+
+src/DarkHoleFinder.i: src/DarkHoleFinder.cpp.i
+
+.PHONY : src/DarkHoleFinder.i
+
+# target to preprocess a source file
+src/DarkHoleFinder.cpp.i:
+	cd /home/jochenalt/catkin_ws/src && $(MAKE) -f pentapod_server/CMakeFiles/pentapod_server_node.dir/build.make pentapod_server/CMakeFiles/pentapod_server_node.dir/src/DarkHoleFinder.cpp.i
+.PHONY : src/DarkHoleFinder.cpp.i
+
+src/DarkHoleFinder.s: src/DarkHoleFinder.cpp.s
+
+.PHONY : src/DarkHoleFinder.s
+
+# target to generate assembly for a file
+src/DarkHoleFinder.cpp.s:
+	cd /home/jochenalt/catkin_ws/src && $(MAKE) -f pentapod_server/CMakeFiles/pentapod_server_node.dir/build.make pentapod_server/CMakeFiles/pentapod_server_node.dir/src/DarkHoleFinder.cpp.s
+.PHONY : src/DarkHoleFinder.cpp.s
 
 src/mongoose.o: src/mongoose.c.o
 
@@ -267,17 +369,25 @@ help:
 	@echo "... all (the default if no target is provided)"
 	@echo "... clean"
 	@echo "... depend"
-	@echo "... list_install_components"
 	@echo "... install"
 	@echo "... rebuild_cache"
-	@echo "... edit_cache"
-	@echo "... pentapod_server_node"
+	@echo "... move_base_msgs_generate_messages_nodejs"
+	@echo "... move_base_msgs_generate_messages_py"
+	@echo "... move_base_msgs_generate_messages_lisp"
+	@echo "... list_install_components"
 	@echo "... install/strip"
 	@echo "... install/local"
+	@echo "... move_base_msgs_generate_messages_cpp"
+	@echo "... move_base_msgs_generate_messages_eus"
 	@echo "... test"
+	@echo "... pentapod_server_node"
+	@echo "... edit_cache"
 	@echo "... src/CmdDispatcher.o"
 	@echo "... src/CmdDispatcher.i"
 	@echo "... src/CmdDispatcher.s"
+	@echo "... src/DarkHoleFinder.o"
+	@echo "... src/DarkHoleFinder.i"
+	@echo "... src/DarkHoleFinder.s"
 	@echo "... src/mongoose.o"
 	@echo "... src/mongoose.i"
 	@echo "... src/mongoose.s"
