--- a/ros/src/pentapod_server/costmaps/local_costmap_params.yaml
+++ b/ros/src/pentapod_server/costmaps/local_costmap_params.yaml
@@ -3,10 +3,10 @@ local_costmap:
   robot_base_frame: base_link
   update_frequency: 2.5
   publish_frequency: 1.0
-  static_map: false
+  static_map: true
   # Setting the "rolling_window" parameter to true means that the costmap 
   # will remain centered around the robot as the robot moves through the world
-  rolling_window: true
+  rolling_window: false
   width: 4
   height: 4
   resolution: 0.05
