--- a/ros/src/pentapod_server/costmaps/base_local_planner_params.yaml
+++ b/ros/src/pentapod_server/costmaps/base_local_planner_params.yaml
@@ -2,7 +2,7 @@ TrajectoryPlannerROS:
   holonomic_robot: true
   min_in_place_vel_theta: 0.0
 
-  y_vels: -0.1, -0.09, -0.08, -0.07,  -0.06, -0.05, -0.04, -0.03, -0.02, -0.01, 0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09, 0.1 
+  y_vels: -0.1, -0.01, 0.01, 0.1 
   max_vel_theta: 0.3
   min_vel_theta: -0.3
   escape_vel: -0.100    # use negative value to escape, otherwise bot runs forward when escaping
@@ -14,3 +14,8 @@ TrajectoryPlannerROS:
   acc_lim_x: 0.06
   acc_lim_y: 0.06
 
+  occdist_scale: 0.5    # The weighting for how much the controller should attempt to avoid obstacles. default was0.5
+  pdist_scale: 0.6       # The weighting for how much the controller should stay close to the path it was given . default 0.6
+  gdist_scale: 0.8 
+  
+controller_frequency: 10
