--- a/ros/src/pentapod_server/costmaps/teb_local_planner_params.yaml
+++ b/ros/src/pentapod_server/costmaps/teb_local_planner_params.yaml
@@ -1,15 +1,12 @@
 odom_topic: /odom
 map_frame: /map
 
-# use a frequency that is a multiple of the servo update ratio of 11.2ms
-controller_frequency: 20
-  
 # Trajectory
 teb_autosize: True
 dt_ref: 0.4
-dt_hysteresis: 0.1
-global_plan_overwrite_orientation: True
-max_global_plan_lookahead_dist: 3.0
+dt_hysteresis: 0.2
+#global_plan_overwrite_orientation: True
+max_global_plan_lookahead_dist: 1.0
 feasibility_check_no_poses: 2
 allow_init_backward_motion: true
 
@@ -22,20 +19,18 @@ max_vel_y_backwards: 0.100
 max_vel_theta: 0.3
 min_vel_theta: -0.3 
 
-acc_lim_x: 0.06
-acc_lim_y: 0.06
-acc_lim_theta: 3.0
+acc_lim_x: 0.04
+acc_lim_y: 0.04
+acc_lim_theta: 0.2
 
 min_in_place_vel_theta: 0.0
 
 
 # ***************** pentapod robot parameters ********************
 # change that to a proper insect modelling without turning radius
-min_turning_radius: 0
-cmd_angle_instead_rotvel: false # stage simulator takes the angle instead of the rotvel as input (twist message)
 footprint_model: 
   type: circular           # types: "point", "circular", "two_circles", "line", "polygon" type: "line"
-  radius: 0.50              # [m] for type "circular"
+  radius: 0.35              # [m] for type "circular"
 
 # GoalTolerance
 xy_goal_tolerance: 0.05
@@ -43,7 +38,7 @@ yaw_goal_tolerance: 0.05
 free_goal_vel: False
 
 # Obstacles
-min_obstacle_dist: 0.05
+min_obstacle_dist: 0.10
 include_costmap_obstacles: True
 costmap_obstacles_behind_robot_dist: 1.5
 obstacle_poses_affected: 30
