--- a/ros/src/pentapod_server/costmaps/teb_local_planner_params.yaml
+++ b/ros/src/pentapod_server/costmaps/teb_local_planner_params.yaml
@@ -3,9 +3,9 @@ map_frame: /map
 
 # Trajectory
 teb_autosize: True
-dt_ref: 0.4
-dt_hysteresis: 0.2
-#global_plan_overwrite_orientation: True
+#dt_ref: 0.4
+#dt_hysteresis: 0.2
+global_plan_overwrite_orientation: False
 max_global_plan_lookahead_dist: 1.0
 feasibility_check_no_poses: 2
 allow_init_backward_motion: true
@@ -19,10 +19,9 @@ max_vel_y_backwards: 0.100
 max_vel_theta: 0.3
 min_vel_theta: -0.3 
 
-acc_lim_x: 0.04
-acc_lim_y: 0.04
-acc_lim_theta: 0.2
-
+acc_lim_x: 0.2
+acc_lim_y: 0.2
+acc_lim_theta: 0.01
 min_in_place_vel_theta: 0.0
 
 
@@ -30,7 +29,7 @@ min_in_place_vel_theta: 0.0
 # change that to a proper insect modelling without turning radius
 footprint_model: 
   type: circular           # types: "point", "circular", "two_circles", "line", "polygon" type: "line"
-  radius: 0.35              # [m] for type "circular"
+  radius: 0.30              # [m] for type "circular"
 
 # GoalTolerance
 xy_goal_tolerance: 0.05
@@ -38,9 +37,9 @@ yaw_goal_tolerance: 0.05
 free_goal_vel: False
 
 # Obstacles
-min_obstacle_dist: 0.10
+min_obstacle_dist: 0.10          # minimum distance from outer shape of robot to any obstacle.
 include_costmap_obstacles: True
-costmap_obstacles_behind_robot_dist: 1.5
+costmap_obstacles_behind_robot_dist: 1.0
 obstacle_poses_affected: 30
 costmap_converter_plugin: ""
 costmap_converter_spin_thread: True
