--- a/ros/src/pentapod_server/costmaps/base_local_planner_params.yaml
+++ b/ros/src/pentapod_server/costmaps/base_local_planner_params.yaml
@@ -1,21 +1,20 @@
 TrajectoryPlannerROS:
+  # we can strafe
   holonomic_robot: true
+  
+  # robot speed and acceleration limits
   min_in_place_vel_theta: 0.0
-
-  y_vels: -0.1, -0.08,-0.06, -0.04, -0.02, 0.02, 0.04, 0.06 0.08, 0.1 
-  max_vel_theta: 0.3
-  min_vel_theta: -0.3
+  y_vels: -0.1, -0.08,-0.06, -0.04, -0.02, -0.01,0.01, 0.02, 0.04, 0.06 0.08, 0.1 
+  max_vel_theta: 0.2
+  min_vel_theta: -0.2
   escape_vel: -0.100    # use negative value to escape, otherwise bot runs forward when escaping
   max_vel_x: 0.100      # maximum forward velocity in [m/s]
   min_vel_x: -0.100
   max_vel_y: 0.100      # max strafing speed
   min_vel_y: -0.100     # 
-  acc_lim_theta: 0.01
-  acc_lim_x: 0.02
-  acc_lim_y: 0.02
+  acc_lim_theta: 0.15
+  acc_lim_x: 0.15
+  acc_lim_y: 0.15
 
-  occdist_scale: 0.5    # The weighting for how much the controller should attempt to avoid obstacles. default was0.5
-  pdist_scale: 0.6       # The weighting for how much the controller should stay close to the path it was given . default 0.6
-  gdist_scale: 0.8 
   
-controller_frequency: 5
+controller_frequency: 3
