local costmap now laser based

--- a/ros/src/pentapod_server/costmaps/base_local_planner_params.yaml
+++ b/ros/src/pentapod_server/costmaps/base_local_planner_params.yaml
@@ -17,4 +17,4 @@ TrajectoryPlannerROS:
   acc_lim_y: 0.06
 
   
-controller_frequency: 7
+controller_frequency: 5 # same like publish frequency of local planner
