--- a/ros/src/pentapod_server/costmaps/global_costmap_params.yaml
+++ b/ros/src/pentapod_server/costmaps/global_costmap_params.yaml
@@ -1,10 +1,10 @@
 global_costmap:
   global_frame: /map
   robot_base_frame: base_link
-  update_frequency: 2.0
-  publish_frequency: 1.0
+  update_frequency: 2.0   # slam map is published with 2Hz, this should be the same 
+  publish_frequency: 1.0  # global cost map is used only when a new navigation goal is set. No need to go higher than 1Hz
   static_map: true
   rolling_window: false
-  always_send_full_costmap : false
+  always_send_full_costmap: true
 
  
