--- a/ros/src/pentapod_server/costmaps/local_costmap_params.yaml
+++ b/ros/src/pentapod_server/costmaps/local_costmap_params.yaml
@@ -1,16 +1,17 @@
 local_costmap:
-  global_frame: /map
+  global_frame: odom
   robot_base_frame: base_link
-  update_frequency: 2.0
-  publish_frequency: 1.0
-  static_map: true
+  update_frequency: 5.0    
+  publish_frequency: 5.0   # publish that often, that the local plan is updated frequently
+  static_map: false
   # Setting the "rolling_window" parameter to true means that the costmap 
   # will remain centered around the robot as the robot moves through the world
-  rolling_window: False
+  rolling_window: True
   width: 2.0
   height: 2.0
   resolution: 0.05
   transform_tolerance: 0.5
+  always_send_full_costmap: true
 plugins:
 - {name: static_layer, type: "costmap_2d::StaticLayer"}
 - {name: obstacle_layer, type: "costmap_2d::ObstacleLayer"}
