--- a/ros/src/pentapod_server/costmaps/local_costmap_params.yaml
+++ b/ros/src/pentapod_server/costmaps/local_costmap_params.yaml
@@ -10,7 +10,7 @@ local_costmap:
   width: 2.0
   height: 2.0
   resolution: 0.05
-  transform_tolerance: 0.5
+  transform_tolerance: 0.5   # tolerable tf latency
   always_send_full_costmap: true
 plugins:
 - {name: static_layer, type: "costmap_2d::StaticLayer"}
