--- a/ros/src/pentapod_server/config/local_costmap_params.sim.yaml
+++ b/ros/src/pentapod_server/config/local_costmap_params.sim.yaml
@@ -1,16 +1,21 @@
 local_costmap:
+  # circular footprint radius of the pentapod
+  # in the local map we use a smaller radius than in the global to prevent that the robot is stuck in lethal locations close to a wall.  
+  robot_radius: 0.30
+
   global_frame: /map
   robot_base_frame: base_link
   update_frequency: 5.0
-  publish_frequency: 2.0
+  publish_frequency: 5.0
   static_map: true
   # Setting the "rolling_window" parameter to true means that the costmap 
   # will remain centered around the robot as the robot moves through the world
-  rolling_window: False
+  rolling_window: true
   width: 2.0
   height: 2.0
   resolution: 0.05
-  transform_tolerance: 0.5
+  transform_tolerance: 0.5   # tolerable tf latency
+  always_send_full_costmap: true
 plugins:
 - {name: static_layer, type: "costmap_2d::StaticLayer"}
 - {name: obstacle_layer, type: "costmap_2d::ObstacleLayer"}
