--- a/ros/src/pentapod_server/config/teb_local_planner_params.yaml
+++ b/ros/src/pentapod_server/config/teb_local_planner_params.yaml
@@ -4,7 +4,8 @@ map_frame: /map
 # Trajectory
 # global_plan_overwrite_orientation: True    # global plan has not orientation but xy only, so local plan needs to adapt the orientation to the goal. Default: True
 max_global_plan_lookahead_dist: 2.0
-allow_init_backward_motion: true
+costmap_obstacles_behind_robot_dist: 2.0    # Don't know why, but default of 1.0 gives strange behaviour 
+
 
 # Robot acceleration and speed limits
 max_vel_x: 0.100
@@ -12,10 +13,10 @@ max_vel_x_backwards: 0.100
 max_vel_y: 0.100
 max_vel_y_backwards: 0.100
 
-max_vel_theta: 0.2
-min_vel_theta: -0.2 
-acc_lim_x: 0.06
-acc_lim_y: 0.06
+max_vel_theta: 0.3
+min_vel_theta: -0.3 
+acc_lim_x: 0.04
+acc_lim_y: 0.04
 acc_lim_theta: 0.06
 min_in_place_vel_theta: 0.0
 
@@ -25,20 +26,18 @@ footprint_model:
   type: point            # types: "point", "circular", "two_circles", "line", "polygon" type: "line"
 
 # GoalTolerance is smaller than a grid cell 
-xy_goal_tolerance: 0.05
-yaw_goal_tolerance: 0.05
+xy_goal_tolerance: 0.02
+yaw_goal_tolerance: 0.02
 
 # Trajectory scoring parameters  
-#occdist_scale: 0.5     # The weighting for how much the controller should attempt to avoid obstacles. default 0.5
-#pdist_scale: 0.6       # The weighting for how much the controller should stay close to the path it was given. default 0.6
-#gdist_scale: 0.8 
+#occdist_scale: 1.0     # The weighting for how much the controller should attempt to avoid obstacles. default 0.5. Increased
+#pdist_scale: 0.7       # The weighting for how much the controller should stay close to the path it was given. default 0.6
+#gdist_scale: 0.8       # goal distance. default 0.8
   
 # Obstacles
-min_obstacle_dist: 0.36          # minumum distance from outer shape of robot to any obstacle.
-inflation_dist: 0.80             # Buffer zone around obstacles with non-zero penalty costs (should be larger than min_obstacle_dist in order to take effect). Also refer to the weight weight_inflation. Default 0.0
+min_obstacle_dist: 0.35            # minumum distance from outer shape of robot to any obstacle.
+inflation_dist: 0.55               # Buffer zone around obstacles with non-zero penalty costs (should be larger than min_obstacle_dist in order to take effect). Also refer to the weight weight_inflation. Default 0.0
 include_costmap_obstacles: True
-costmap_obstacles_behind_robot_dist: 0.5
-obstacle_poses_affected: 30      # Default 30
 costmap_converter_plugin: ""
 costmap_converter_spin_thread: True
 costmap_converter_rate: 5
@@ -46,25 +45,17 @@ costmap_converter_rate: 5
 # Optimization
 optimization_activate: True
 optimization_verbose: False
-penalty_epsilon: 0.05 # needs to be smaller than any acceleration limit (really strange parameter, since acceleration limits have not the same dimension ?!? )
-
+penalty_epsilon: 0.03 # needs to be smaller than any acceleration limit (really strange parameter, since acceleration limits have not the same dimension ?!? )
+exact_arc_length: true # takes more cpu, but gives smoother movement. Default False
+    
+# do not acclerate faster than allowed, so increase the weight for that
+weight_acc_lim_x: 3.0     
+weight_acc_lim_theta: 3.0
 # Optimization weight for satisfying the non-holonomic kinematics. Set to 0 since strafing has equal cost like driving forward
 weight_kinematics_nh: 0                     # do not create trajectories for car-like robots
 weight_kinematics_forward_drive: 0          # do not try to drive forward
 weight_kinematics_turning_radius: 0         # do not try to optimize the turning radius
+weight_inflation: 0.5                       # weight how much the inflation_dist is considered (pretty much to avoid lurking too close too walls)
 
 # Homotopy Class Planner
 enable_homotopy_class_planning: False # would induce explosive cpu load 
-#enable_multithreading: True
-#simple_exploration: False
-#max_number_classes: 1
-#selection_cost_hysteresis: 1.0
-#selection_obst_cost_scale: 1.0
-#selection_alternative_time_cost: False
-#roadmap_graph_no_samples: 15
-#roadmap_graph_area_width: 5
-#h_signature_prescaler: 0.5
-#h_signature_threshold: 0.1
-#obstacle_keypoint_offset: 0.1
-#obstacle_heading_threshold: 0.45
-#visualize_hc_graph: False
