Darkholes finder works in general

--- a/ros/src/pentapod_server/config/costmap_common_params.yaml
+++ b/ros/src/pentapod_server/config/costmap_common_params.yaml
@@ -1,6 +1,7 @@
 # timing tolerance of transformation in [s] 
 transform_tolerance: 0.30
 map_type: costmap
+use_grid_path: True
 obstacle_layer:
   enabled: true
   # the maximum range sensor reading that will result in an obstacle being put into the costmap
@@ -16,7 +17,7 @@ inflation_layer:
   enabled: true
   cost_scaling_factor: 5.0 
   # The inflation radius should be set to the maximum distance from obstacles 
-  inflation_radius: 0.45
+  inflation_radius: 0.50
 static_layer:
   enabled: true
   map_topic: /map
