--- a/ros/src/pentapod_server/config/hectormapping_params.yaml
+++ b/ros/src/pentapod_server/config/hectormapping_params.yaml
@@ -1,6 +1,6 @@
 scan_topic: scan
 base_frame: base_link
-odom_frame: base_link
+odom_frame: odom
 
 output_timing: false
 advertise_map_service: true
