--- a/ros/src/pentapod_server/config/local_costmap_params.sim.yaml
+++ b/ros/src/pentapod_server/config/local_costmap_params.sim.yaml
@@ -3,9 +3,9 @@ local_costmap:
   # in the local map we use a smaller radius than in the global to prevent that the robot is stuck in lethal locations close to a wall.  
   robot_radius: 0.30
 
-  global_frame: /map
+  global_frame: map
   robot_base_frame: base_link
-  update_frequency: 5.0
+  update_frequency: 5.0    # lidar delivers scans with 10Hz
   publish_frequency: 5.0
   static_map: true
   # Setting the "rolling_window" parameter to true means that the costmap 
