--- a/ros/src/pentapod_server/config/local_costmap_params.yaml
+++ b/ros/src/pentapod_server/config/local_costmap_params.yaml
@@ -1,9 +1,9 @@
 local_costmap:
   # circular footprint radius of the pentapod
   # in the local map we use a smaller radius than in the global to prevent that the robot is stuck in lethal locations close to a wall.  
-  robot_radius: 0.0
+  robot_radius: 0.30
   
-  global_frame: odom
+  global_frame: map
   robot_base_frame: base_link
   update_frequency: 5.0    # lidar delivers scans with 10Hz
   publish_frequency: 5.0 
