Added DWA Planner. But does not support holomorphic support, tries to drive forward all the time

--- a/ros/src/pentapod_server/config/base_local_planner_params.yaml
+++ b/ros/src/pentapod_server/config/base_local_planner_params.yaml
@@ -17,6 +17,7 @@ TrajectoryPlannerROS:
   acc_lim_y: 0.05
   
 controller_frequency: 5 # same like publish frequency of local planner
+dwa: false
 
 # Default recover behaviour is rotating a lot, which is quite useless for a holonomic robot
 clearing_rotation_allowed: false
