--- a/ros/src/pentapod_server/config/teb_local_planner_params.yaml
+++ b/ros/src/pentapod_server/config/teb_local_planner_params.yaml
@@ -15,6 +15,7 @@ max_vel_y_backwards: 0.100
 
 max_vel_theta: 0.3
 min_vel_theta: -0.3 
+
 acc_lim_x: 0.05
 acc_lim_y: 0.05
 acc_lim_theta: 0.05
@@ -26,7 +27,7 @@ footprint_model:
   type: point            # types: "point", "circular", "two_circles", "line", "polygon" type: "line"
 
 # GoalTolerance is smaller than a grid cell 
-xy_goal_tolerance: 0.05
+xy_goal_tolerance: 0.02
 yaw_goal_tolerance: 0.1
 
 # Trajectory scoring parameters  
@@ -36,7 +37,7 @@ yaw_goal_tolerance: 0.1
   
 # Obstacles
 min_obstacle_dist: 0.30            # minumum distance from outer shape of robot to any obstacle.
-inflation_dist: 0.55               # Buffer zone around obstacles with non-zero penalty costs (should be larger than min_obstacle_dist in order to take effect). Also refer to the weight weight_inflation. Default 0.0
+inflation_dist: 0.50               # Buffer zone around obstacles with non-zero penalty costs (should be larger than min_obstacle_dist in order to take effect). Also refer to the weight weight_inflation. Default 0.0
 include_costmap_obstacles: True
 
 # Optimization
@@ -49,9 +50,9 @@ exact_arc_length: true # takes more cpu, but gives smoother movement. Default Fa
 weight_acc_lim_x: 3.0     
 weight_acc_lim_theta: 3.0
 # Optimization weight for satisfying the non-holonomic kinematics. Set to 0 since strafing has equal cost like driving forward
-weight_kinematics_nh: 1.0                   # do not create trajectories for car-like robots
+weight_kinematics_nh: 1.0                   # do not create trajectories for car-like robots but for small pentapods with strifing. I feel that a factor below 1.0 more osscilations 
 weight_kinematics_forward_drive: 0.0        # do not try to drive forward
-weight_kinematics_turning_radius: 0         # do not try to optimize the turning radius
+weight_kinematics_turning_radius: 10         # do not try to optimize the turning radius
 weight_inflation: 0.8                       # weight how much the inflation_dist is considered (pretty much to avoid lurking too close too walls)
 
 # Homotopy Class Planner
