--- a/ros/src/pentapod_server/config/base_local_planner_params.yaml
+++ b/ros/src/pentapod_server/config/base_local_planner_params.yaml
@@ -4,7 +4,8 @@ TrajectoryPlannerROS:
   
   # robot speed and acceleration limits
   min_in_place_vel_theta: 0.0
-  y_vels: -0.1, -0.08,-0.06, -0.04, -0.02, -0.01,0.01, 0.02, 0.04, 0.06 0.08, 0.1 
+  y_vels: [-0.1, -0.01, 0.01, 0.1 ]
+
   max_vel_theta: 0.3
   min_vel_theta: -0.3
   escape_vel: -0.100    # use negative value to escape, otherwise bot runs forward when escaping
@@ -16,8 +17,13 @@ TrajectoryPlannerROS:
   acc_lim_x: 0.05
   acc_lim_y: 0.05
   
+  latch_xy_goal_tolerance: true
+  sim_time: 1.0
+  dwa: false
+  oscillation_reset_dist: 10.00
+  heading_lookahead: 1.0
+
 controller_frequency: 5 # same like publish frequency of local planner
-dwa: false
 
 # Default recover behaviour is rotating a lot, which is quite useless for a holonomic robot
 clearing_rotation_allowed: false
