Introduced autonomous bodyheight during navigation influenced by distance to walls

--- a/ros/src/pentapod_server/CMakeLists.txt
+++ b/ros/src/pentapod_server/CMakeLists.txt
@@ -146,8 +146,9 @@ include_directories(
 
 # Pentapod common library
 add_executable(${PROJECT_NAME}_node 
-   src/CmdDispatcher.cpp
+   src/Dispatcher.cpp
    src/IntoDarkness.cpp
+   src/FreeWill.cpp
    src/mongoose.c
    src/node.cpp
 )
